# polycube-cpp

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/src/: computeTest.cpp  gendraw.comp  gengrid.comp  gentex.comp  ptnc.vert  solid.frag  textured.frag  xyzuvn.vert
gfx/: CMakeLists.txt
gfx/include/: glHelpers.h
gfx/src/: glHelpers.cpp
utils/: CMakeLists.txt
utils/include/: glslMath.h  perlinNoise.h
utils/src/: glslMathTest.cpp  perlinNoise.cpp
